@@ -2,12 +2,13 @@ import java.util.concurrent.atomic.AtomicBoolean
 
 plugins {
     id 'com.google.osdetector' version '1.6.2' apply false
+    id 'cz.alenkacz.gradle.scalafmt' version '1.16.2' apply false
     // If you want to change `org.jetbrains.kotlin.jvm` version,
     // you also need to change `org.jetbrains.kotlin:kotlin-allopen` version in `dependencies.yml`.
     id 'org.jetbrains.kotlin.jvm' version '1.5.10' apply false
     id 'org.jlleitschuh.gradle.ktlint' version '10.1.0' apply false
 
-    id 'net.ltgt.errorprone' version '1.2.1' apply false
+    id 'net.ltgt.errorprone' version '2.0.2' apply false
 }
 
 allprojects {
@@ -38,6 +39,9 @@ allprojects {
     // Add common JVM options such as max memory and leak detection.
     tasks.withType(JavaForkOptions) {
         maxHeapSize = '512m'
+        if (rootProject.ext.testJavaVersion >= 9) {
+            jvmArgs '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
+        }
 
         // Enable leak detection when '-Pleak' option is specified.
         if (rootProject.hasProperty('leak')) {
@@ -108,6 +112,7 @@ configure(projectsWithFlags('java')) {
         testImplementation 'com.google.errorprone:error_prone_annotations'
 
         // FastUtil
+        implementation 'it.unimi.dsi:fastutil'
         implementation 'it.unimi.dsi:fastutil-core'
         implementation 'it.unimi.dsi:fastutil-extra'
 
@@ -161,6 +166,11 @@ configure(projectsWithFlags('java')) {
         if (task.path.startsWith(':examples:')) {
             // Target Java 11 for examples.
             options.release.set(11)
+            // IntelliJ fails to compile example projects with IntelliJ compiler because of a wrong target
+            // bytecode version which is marked as Java 8 without the following options.
+            // See https://github.com/line/armeria/pull/3712
+            sourceCompatibility = '11'
+            targetCompatibility = '11'
         } else {
             // Target Java 8 for the rest of them.
             options.release.set(8)
@@ -203,9 +213,9 @@ allprojects {
     }
 }
 
-// Require to use JDK 15 when releasing.
+// Require to use JDK 16 when releasing.
 tasks.release.doFirst {
-    if (JavaVersion.current() != JavaVersion.VERSION_15) {
-        throw new IllegalStateException("You must release using JDK 15.");
+    if (JavaVersion.current() != JavaVersion.VERSION_16) {
+        throw new IllegalStateException("You must release using JDK 16.");
     }
 }
